# rsnitch-rs

./: Cargo.toml  LICENSE  Makefile  README.md
config/: hosts.json  rsnitch-rs.desktop  settings.json
src/: main.rs  settings.rs
src/snitch/: button_builder.rs  controls.rs  group_box.rs  host.rs  host_box.rs  info.rs  info_box.rs  mod.rs  snitch_ui.rs  status_bar.rs  statusbar.rs  tab_ui.rs  text_widget.rs  tty.rs  ui.rs
src/snitch/style/: button_builder.rs  mod.rs
src/snitch/tabs/: controls_tab.rs  hosts_tab.rs  mod.rs  settings_tab.rs
src/snitch/tabs/controls/: controls_box.rs  mod.rs
src/snitch/tabs/hosts/: group_box.rs  host.rs  host_box.rs  info_box.rs  mod.rs
src/snitch/widgets/: mod.rs  quad.rs
